WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233630
REGRESSION(
r269103
): this patch is not EME spec compliant
https://bugs.webkit.org/show_bug.cgi?id=233630
Summary
REGRESSION(r269103): this patch is not EME spec compliant
WebKit Commit Bot
Reported
2021-11-30 03:47:08 PST
https://commits.webkit.org/r269103
introduced a regression: this patch is not EME spec compliant This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r269103
(151.31 KB, patch)
2021-11-30 03:47 PST
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
Patch
(5.51 KB, patch)
2021-11-30 03:57 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2021-11-30 03:47:18 PST
Created
attachment 445406
[details]
REVERT of
r269103
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Philippe Normand
Comment 2
2021-11-30 03:48:30 PST
Can't trust bots these days.
Philippe Normand
Comment 3
2021-11-30 03:54:58 PST
.
Philippe Normand
Comment 4
2021-11-30 03:57:12 PST
Created
attachment 445407
[details]
Patch
EWS
Comment 5
2021-11-30 04:49:26 PST
Committed
r286291
(
244650@main
): <
https://commits.webkit.org/244650@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445407
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-11-30 04:50:22 PST
<
rdar://problem/85860811
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug