REGRESSION(r269103): this patch is not EME spec compliant https://bugs.webkit.org/show_bug.cgi?id=233630

Unreviewed, revert r269103. We must validate init data.

Patch by Philippe Normand <pnormand@igalia.com> on 2021-11-30

* Modules/encryptedmedia/CDM.cpp:
(WebCore::CDM::sanitizeInitData):
* platform/encryptedmedia/CDMPrivate.cpp:
(WebCore::CDMPrivate::sanitizeInitData const): Deleted.
* platform/encryptedmedia/CDMPrivate.h:
* platform/graphics/gstreamer/eme/CDMThunder.cpp:
(WebCore::CDMPrivateThunder::supportsInitData const):
(WebCore::CDMPrivateThunder::sanitizeInitData const): Deleted.
* platform/graphics/gstreamer/eme/CDMThunder.h:


Canonical link: https://commits.webkit.org/244650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286291 268f45cc-cd09-0410-ab3c-d52691b4dbfc