Source/WebCore/platform/encryptedmedia/CDMPrivate.cpp
@@ -32,7 +32,6 @@
 #include "CDMMediaCapability.h"
 #include "CDMRequirement.h"
 #include "CDMRestrictions.h"
-#include "InitDataRegistry.h"
 #include "MediaPlayer.h"
 #include "NotImplemented.h"
 #include "ParsedContentType.h"
@@ -514,11 +513,6 @@ void CDMPrivate::getConsentStatus(CDMKeySystemConfiguration&& accumulatedConfigu
 
     // 6. Return Allowed.
     callback(ConsentStatus::Allowed, WTFMove(accumulatedConfiguration), WTFMove(restrictions));
-}
-
-RefPtr<SharedBuffer> CDMPrivate::sanitizeInitData(const AtomString& initDataType, const SharedBuffer& initData) const
-{
-    return InitDataRegistry::shared().sanitizeInitData(initDataType, initData);
 }
 
 
